--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Hoş Geldiniz!</h1>
-    <a href="kullanici_kayit.php">Kayıt Ol</a><br>
-    <a href="giris_yap.php">Giriş Yap</a>
+    <a href="kullanici_kayit.php">Register</a><br>
+    <a href="giris_yap.php">Login</a>
 </body>
 </html>
