--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Web Sitesi</title>
 </head>
 <body>
-    <h1>Hoş Geldiniz!</h1>
+    <h1>Welcome!</h1>
     <a href="kullanici_kayit.php">Register</a><br>
     <a href="giris_yap.php">Login</a>
 </body>
